examples/test/testpolicy881.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy881
  namespace: namespace418
spec:
  podSelector:
    matchLabels:
      key5: value2
      key48: value25
      key46: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value11
          key25: value45
          key15: value27
      podSelector:
        matchLabels:
          key33: value5
          key31: value25
